# amfoss-tasks

./: README.md  readme.md
Introspection/: README.md
Task-0/: README.md
Task-01/: README.md
Task-02/: README.md
Task-03/: README.md  death_notes.py  great_eye.py  homework_time.py  jackjack_codes.py  rich_tony.py  the_D.c
Task-04/: MathQuiz.java  README.md
Task-05/: out.csv
Task-05/src/: main.rs
Task-07/: README.md  pubspec.yaml
Task-07/android/app/: build.gradle
Task-07/lib/: main.dart  widget_slider.dart
Task-08/: README.md
Task-09/: README.md
Task-1/: README.md
Task-10/: README.md
Task-10/Psets/pset1/: cash.c  mario.c
Task-10/Psets/pset2/: caesar1.c
Task-10/Psets/pset3/: plurality.c
Task-11/: README.md
Task-13/: README.md
Task-14/: pass.txt
Task-8/: README.md  code.py
Task-9/: spammer.js
Task1/: readme.md
introspection/: README.md
task-00/: README.md
task-01/: README.md
task-02/: README.md
task-03/: README.md  good_strings.py  great_eye.py  homework_time.py  infinity_stones.py  ninja_sum.py  pizza_fest.py
task-04/: README.md
task-05/: Cargo.toml  README.md
task-05/src/: main.rs
task-06/: README.md  geddit.go
task-07/: README.md
task-07/ios/Runner.xcodeproj/: project.pbxproj
task-07/lib/: amFOSS.dart  widget_slider2.dart
task-08/: README.md  code.py
task-09/: README.md
task-10/: README.md
task-10/Psets/pset1/: Hello.c
task-11/: README.md
task-12/: README.md  codechef.py
task-13/: README.md
task-14/: README.md
task-15/: README.md  euler1.py  euler2.py  euler3.py  euler4.py  euler5.py
(+2 files in other folders)
