  
[package]
name = "webrust"
version = "0.1.0"
authors = ["MajesticHero <38969626+Coding-Runner@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
scraper = "0.11.0"
csv = "1.1"
regex = "1.4.2"
serde = "1.0.55"